matrix-synapse/10-matrix-identity-deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  namespace: matrix
  name: matrix-identity
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: matrix
      labels:
        app: matrix-identity
    spec:
      volumes:
        - name: neo-identity-disk
          persistentVolumeClaim:
            claimName: neo-identity-disk
        - name: neo-identity-config
          persistentVolumeClaim:
            claimName: neo-identity-config
        - name: neo-identity-var
          persistentVolumeClaim:
            claimName: neo-identity-var
        - name: firebase-secrets
          secret:
            secretName: neo-identity-service-account
#        - name: neo-disk
#          persistentVolumeClaim:
#            claimName: neo-disk
#            readOnly: true
      containers:
        - name: matrix-identity
          image: 'gcr.io/wiresafe-project/matrix-identity:0.0.10'
          ports:
            - containerPort: 8090
              name: http
          volumeMounts:
            - name: neo-identity-disk
              mountPath: /var/mxisd
            - name: neo-identity-config
              mountPath: /etc/mxisd
            - name: firebase-secrets
              mountPath: /etc/firebase
              readOnly: true
            - name: neo-identity-var
              mountPath: /var/mxisd
              readOnly: false
#            - name: neo-disk
#              mountPath: /var/synapse
#              readOnly: true
          readinessProbe:
            httpGet:
              path: /_matrix/identity/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 10
