matrix-synapse/10-matrix-synapse-deployment.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  namespace: matrix
  name: matrix
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: matrix
      labels:
        app: matrix
    spec:
      volumes:
      - name: neo-disk
        gcePersistentDisk:
          pdName: neo-disk
      containers:
      - name: matrix
        image: gcr.io/wiresafe-project/matrix:latest
        ports:
        - containerPort: 8008
          name: http
        volumeMounts:
        - mountPath: /data
          name: neo-disk
        readinessProbe:
          httpGet:
            path: /_matrix/client/
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          failureThreshold: 10
