matrix-synapse/20-matrix-identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-identity
  namespace: matrix
  labels:
    app: matrix-identity
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: matrix-identity
  type: NodePort
