matrix-synapse/20-matrix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
  labels:
    app: matrix
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  - port: 8448
    name: federation
    targetPort: federation
  selector:
    app: matrix
  type: NodePort
