matrix-synapse/20-matrix-synapse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
  labels:
    app: matrix
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: matrix
  type: NodePort
