matrix-synapse/30-matrix-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matrix
  namespace: matrix
  annotations:
    kubernetes.io/ingress.global-static-ip-name: neo-wiresafe-com
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: gce
spec:
  tls:
  - secretName: neo-tls
    hosts:
    - neo.wiresafe.com
  backend:
    serviceName: matrix
    servicePort: synapse-http
  rules:
    - host: neo.wiresafe.com
      http:
        paths:
        - backend:
            serviceName: matrix
            servicePort: synapse-http
